# SmartCrop

./: .coverage  .gitignore  FARMER_DASHBOARD_ENHANCEMENTS.md  Fertilizer Recommendation System.ipynb  LICENSE  MODULE.md  README.md  TODO.md  coverage.xml  pyproject.toml  repo_evaluator.py  requirements.txt  run_train.bat  setup_demo_user.py  train_fertilizer_model.py  train_leaf_model.py  train_leaf_model_advanced.py
.github/workflows/: ci.yml
.users/: equipment_history.json  profit_history.json  users.json
data/: Indian_cities_coordinates.csv  crops_duration.csv  crops_duration_new.csv
notebooks/: train_leaf_model.ipynb  train_model.ipynb
output/: Ttdreact25__SmartCrop.json
saved_models/: crop_encoder.pkl  fertilizer_model.pkl  leaf_model.pkl  soil_encoder.pkl
smart_crop/: __init__.py  auth.py  crop_comparator.py  data_loader.py  equipment_recommender.py  leaf_detector.py  location_mapper.py  nearby_crops.py  organic_farming.py  prediction_history.py  predictor.py  profit_estimator.py  risk_analyzer.py  storage_tips.py  translator.py  weather_api.py
streamlit_app/: app.py
tests/: __init__.py  test_auth.py  test_crop_comparator.py  test_data_loader.py  test_equipment_recommender.py  test_leaf_detector.py  test_location_mapper.py  test_nearby_crops.py  test_organic_farming.py  test_prediction_history.py  test_predictor.py  test_profit_estimator.py  test_risk_analyzer.py  test_storage_tips.py  test_translator.py  test_weather_api.py
